# youtube-sync

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.potoken  LICENSE  README.md  docker-compose.yml  entrypoint.py  pre-requirements.txt  pyproject.toml  rclone.conf  refresh  requirements.testing.txt  run  setup.py  startup.sh  test  yt_pot_extractor.py
.github/workflows/: lint.yml  push_macos.yml  push_ubuntu.yml  push_win.yml
sample_json/: youtube.json
src/youtube_sync/: __init__.py  api.py  base_sync.py  brighteon.py  brighteon_bot.py  clean_filename.py  cli.py  config.py  cookies.py  create.py  date.py  downloadmp3.py  fetch_html.py  ffmpeg.py  filesystem.py  final_result.py  generic.py  http_session.py  json_util.py  library.py  library_data.py  logutil.py  open_webdriver.py  playwright_launcher.py  pools.py  rumble.py  rumble_bot.py  settings.py  sync.py  sync_impl.py  to_channel_url.py  types.py  vid_entry.py  video_info.py  youtube_bot.py  youtube_pull.py  youtube_sync.py  ytdllp_update.py  ytdlp.py  ytdlp_api.py  (+2 more)
src/youtube_sync/archive/: video_info.py
src/youtube_sync/brighteon/: api.py  bot.py  brighteon.py
src/youtube_sync/cli/: sync_multiple.py  sync_one.py  test_sync_multiple.py
src/youtube_sync/rumble/: api.py  bot.py  rumble.py  rumble_extra.py
src/youtube_sync/youtube/: api.py  bot.py  bot_scanner.py  scan.py  youtube.py
src/youtube_sync/ytdlp/: bulk_download_mp3s.py  download_best_audio.py  download_item.py  download_request.py  download_video_upload_date.py  downloader.py  error.py  exe.py  exe_result.py  plugins.py  scan_for_vids.py  update.py  ytdlp.py  ytdlp_plugins.py  ytdlp_scan_for_vids.py
tests/: test_cli.py  test_library.py  test_sync.py
tests/integration/: base.py  test_brighteon.py  test_cookies.py  test_cookies_ytdlp.py  test_remotefs.py  test_rumble.py  test_youtube.py  test_youtube_bot.py
tests/unit/: test_cli.py  test_cookies.py  test_integration_youtube.py  test_json.py  test_library.py  test_multi_sync.py  test_rumble_download.py  test_sync.py  test_youtube.py  test_ytdlp.py
tests/unit/test_data/: config.json
tests/unit/test_data/test_sync/: library.json
youtube/: cookies.pkl  cookies.txt
