[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube_sync"
readme = "README.md"
description = "syncs youtube for offline play"
requires-python = ">=3.10"
keywords = ["template-python-cmd"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]

dependencies = [
    "filelock",
    "pytest-playwright",
    "beautifulsoup4>=4.13.3",
    "ytdlp-brighteon>=2023.10.3",
    "docker-run-cmd>=1.0.13",
    "Pillow",
    "certifi",
    "appdirs",
    "open-webdriver>=1.6.3",
    "pytz",
    "python-dateutil",
    "feedparser",
    "download",
    "static-ffmpeg>=2.12",
]

# Change this with the version number bump.
version = "1.0.38"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]


[project.scripts]
youtube-sync = "youtube_sync.cli:main"
