[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"



[project]
name = "youtube_sync"
readme = "README.md"
description = "syncs youtube for offline play"
requires-python = ">=3.10"
keywords = ["template-python-cmd"]
license = "BSD-3-Clause"
classifiers = ["Programming Language :: Python :: 3"]
maintainers = [
    {name = "Zachary Vorhies"}
]

dependencies = [
    "filelock",
    "ytdlp-brighteon>=2023.10.3",
    "docker-run-cmd>=1.0.13",
    "Pillow",
    "certifi",
    "appdirs",
    "open-webdriver>=1.6.9",
    "pytz",
    "python-dateutil",
    "feedparser",
    "download",
    "static-ffmpeg>=2.12",
    "pytest-playwright",
    "beautifulsoup4>=4.13.3",
    "virtual-fs>=1.0.21",
    "webdriver-manager",
    "pyvirtualdisplay",
    "yt-dlp>=2025.3.31",
    "rclone-api>=1.5.61",
    "yt-dlp-proxy>=1.0.7",
    "youtube-trusted-session-generator>=0.0.4",
    "yt-dlp-get-pot"
]

# Change this with the version number bump.
version = "1.2.77"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]


[project.scripts]
youtube-sync = "youtube_sync.cli.sync_one:main"
youtube-sync-all = "youtube_sync.cli.sync_multiple:main"

