[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"



[project]
name = "youtube_sync"
readme = "README.md"
description = "syncs youtube for offline play"
requires-python = ">=3.10"
keywords = ["template-python-cmd"]
license = "BSD-3-Clause"
classifiers = ["Programming Language :: Python :: 3"]
maintainers = [
    {name = "Zachary Vorhies"}
]

dependencies = [
    "filelock",
    "ytdlp-brighteon>=2023.10.3",
    "docker-run-cmd>=1.0.13",
    "Pillow",
    "certifi",
    "appdirs",
    "open-webdriver>=1.6.9",
    "pytz",
    "python-dateutil",
    "feedparser",
    "download",
    "static-ffmpeg>=2.12",
    "playwright>=1.56.0",
    "pytest-playwright",
    "beautifulsoup4>=4.13.3",
    "virtual-fs>=1.0.24",
    "webdriver-manager",
    "pyvirtualdisplay",
    # Updated to include curl-cffi extras for Rumble browser impersonation support (--impersonate chrome-120)
    # Using latest stable version with curl-cffi support (pre-release versions available if needed with --prerelease=allow)
    "yt-dlp[default,curl-cffi]>=2025.3.31",
    "rclone-api>=1.5.61",
    "yt-dlp-proxy>=1.0.7",
    "youtube-trusted-session-generator>=0.0.4",
    "yt-dlp-get-pot",
    "json5>=0.9.0"
]

# Change this with the version number bump.
version = "1.2.86"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/node_modules",
    "**/.git",
    "**/.venv",
    "**/.build",
    "**/build",
    "**/dist",
    "**/*.egg-info",
]

# Type checking configuration
typeCheckingMode = "strict"
pythonVersion = "3.10"
pythonPlatform = "All"
useLibraryCodeForTypes = true
analyzeUnannotatedFunctions = true
strictParameterNoneValue = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

# Report settings
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = false
reportUnusedClass = false
reportUnusedFunction = false
reportUnusedVariable = false
reportDuplicateImport = true
reportWildcardImportFromLibrary = true
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false
reportGeneralTypeIssues = true
reportPropertyTypeMismatch = true
reportFunctionMemberAccess = true
reportPrivateUsage = false
reportConstantRedefinition = false
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportOverlappingOverload = true
reportMissingSuperCall = false
reportUninitializedInstanceVariable = false
reportInvalidStringEscapeSequence = true
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownLambdaType = "error"
reportUnknownVariableType = "error"
reportUnknownMemberType = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportMissingReturnType = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"
reportInvalidTypeVarUse = true
reportCallInDefaultInitializer = false
reportUnnecessaryIsInstance = false
reportUnnecessaryCast = false
reportUnnecessaryComparison = false
reportUnnecessaryContains = false
reportAssertAlwaysTrue = false
reportSelfClsParameterName = true
reportImplicitStringConcatenation = false
reportUndefinedVariable = true
reportUnboundVariable = true
reportInvalidStubStatement = true
reportIncompleteStub = true
reportUnsupportedDunderAll = true
reportUnusedCallResult = false
reportUnusedCoroutine = true
reportUnusedExpression = false
reportUnnecessaryTypeIgnoreComment = false
reportMatchNotExhaustive = true

# Display settings
verboseOutput = false
autoImportCompletions = false
indexing = false
functionSignatureDisplay = "compact"

# Task list tokens
taskListTokens = ["TODO", "FIXME", "BUG", "HACK", "NOTE"]

[[tool.pyright.executionEnvironments]]
root = "."
pythonVersion = "3.10"
pythonPlatform = "All"

[[tool.pyright.executionEnvironments]]
root = "tests"
pythonVersion = "3.10"
pythonPlatform = "All"
# Enforce return type annotations even for test methods
reportMissingReturnType = "error"

[project.scripts]
youtube-sync = "youtube_sync.cli.sync_one:main"
youtube-sync-all = "youtube_sync.cli.sync_multiple:main"

